// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #2B2D33;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ any props 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #2B2D33;
}

<span
  class="c0 className"
  id="Counter"
  title="title"
>
  18
</span>
`;

exports[`Counter w/ design: accent 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #00A5BC;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ design: critical 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #EE505A;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ design: disabled 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #D5D5D6;
  color: #2B2D33;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ design: neutral 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #2B2D33;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ design: success 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #19B28D;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ design: warning 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #F88545;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ position: absolute 1`] = `
.c0 {
  position: absolute;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #2B2D33;
  top: 10px;
  bottom: 10px;
  left: 10px;
  right: 10px;
}

<span
  class="c0"
>
  18
</span>
`;

exports[`Counter w/ position: relative 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #FFFFFF;
  padding: 0 6px;
  min-width: 20px;
  height: 20px;
  border-radius: 16px;
  background-color: #2B2D33;
}

<span
  class="c0"
>
  18
</span>
`;
